package ub.edu.model;

public class Tematica {
}
