package ub.edu.resources.dao;

import ub.edu.model.Artist;

public interface DAOArtist extends DAO<Artist> {
}
