package ub.edu.resources.dao;

import ub.edu.model.Temporada;

public interface DAOTemporada extends DAO<Temporada> {
}
